<resources>
    <string name="app_name">Tapp</string>

    <string name="tap_button">Start tapping test</string>
    <string name="spiral_button">Start spiral test</string>
    <string name="level_button">Start level test</string>
    <string name="popper_button">Start popping test</string>>
    <string name="curl_button">Start curling test</string>>

    <string name="save_button">Save spiral</string>
    <string name="spiral_info">Trace the spiral</string>
    <string name="curl_start">Press the button to start curling.</string>
    <string name="popper_end">Finish test</string>

    <string name="trial_start">Start %1$s trial %2$d</string>
    <string name="curl_start">Press the button\nto start curling.</string>
    <string name="curl_res">View Results</string>
    <string name="curl_avg">Average Times</string>
    <string name="curl_end">Finish test</string>

    <string name="results_view">View Results</string>
    <string name="start_trial">Start %1$s trial %2$d</string>

    <string name="class_sheet">1YvI3CjS4ZlZQDYi5PaiA7WGGcoCsZfLoSFM0IdvdbDU</string>
    <string name="private_sheet"></string>
</resources>