<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/src_img"
    tools:context="com.example.tapp.Info">

    <Button
        android:id="@+id/tapping_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"

        android:minHeight="32dp"
        android:minWidth="32dp"
        android:onClick="navRecord"
        android:shadowColor="#676980"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/tap_button"
        android:textColor="#FFFFFF"
        android:textSize="7pt"
        android:layout_marginTop="88dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/spiral_info_button" />

    <Button
        android:text="@string/spiral_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spiral_info_button"
        android:onClick="navSpiral"
        android:minWidth="32dp"
        android:minHeight="32dp"
        android:textSize="7pt"

        android:textColor="#FFFFFF"
        android:background="@drawable/buttonshape"
        android:shadowColor="#676980"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="55dp"
        android:layout_alignTop="@+id/tapping_info_button"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/level_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/spiral_info_button"
        android:layout_below="@+id/spiral_info_button"
        android:layout_marginTop="13dp"
        android:background="@drawable/buttonshape"

        android:minHeight="32dp"
        android:minWidth="32dp"
        android:onClick="navLevel"
        android:shadowColor="#676980"
        android:shadowRadius="5"
        android:text="@string/level_button"
        android:textColor="#FFFFFF"
        android:textSize="7pt" />

    <Button
        android:text="@string/popper_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/popping_info_button"
        android:onClick="navPopper"
        android:minWidth="32dp"
        android:minHeight="32dp"
        android:textSize="7pt"

        android:textColor="#FFFFFF"
        android:background="@drawable/buttonshape"
        android:shadowColor="#676980"
        android:shadowRadius="5"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/level_info_button"
        android:layout_alignStart="@+id/level_info_button" />

    <Button
        android:id="@+id/curling_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/popping_info_button"
        android:layout_below="@+id/popping_info_button"
        android:layout_marginTop="12dp"
        android:background="@drawable/buttonshape"

        android:minHeight="32dp"
        android:minWidth="32dp"
        android:onClick="navCurl"
        android:shadowColor="#676980"
        android:shadowRadius="5"
        android:text="@string/curl_button"
        android:textColor="#FFFFFF"
        android:textSize="7pt" />

    <Button
        android:id="@+id/sway_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/curling_info_button"
        android:layout_below="@+id/curling_info_button"
        android:layout_marginTop="12dp"
        android:background="@drawable/buttonshape"

        android:minHeight="32dp"
        android:minWidth="32dp"
        android:onClick="navSway"
        android:shadowColor="#676980"
        android:shadowRadius="5"
        android:text="Start swaying test"
        android:textColor="#FFFFFF"
        android:textSize="7pt" />

</RelativeLayout>
